<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img_main_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tv_admin_operator_record"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:text="@string/str_admin_operator_record"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:background="@drawable/selector_btn"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="@dimen/dp_10">
        </TextView>

        <TextView
            android:id="@+id/tv_admin_open_box"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:text="@string/str_admin_open_box"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:background="@drawable/selector_btn"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="@dimen/dp_10">
        </TextView>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_back"
        android:gravity="center"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_5"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:background="@drawable/selector_btn"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_margin="@dimen/dp_10"
        android:layout_alignParentRight="true">
    </TextView>

    <TextView
        android:id="@+id/tv_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_show_navigation"
        android:gravity="center"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_5"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:background="@drawable/selector_btn"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_margin="@dimen/dp_10"
        android:layout_above="@+id/tv_exit"
        android:layout_alignParentRight="true">
    </TextView>

    <TextView
        android:id="@+id/tv_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_exit_app"
        android:gravity="center"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_5"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:background="@drawable/selector_btn"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_margin="@dimen/dp_10"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">
    </TextView>
</RelativeLayout>