<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ll_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:orientation="horizontal"
        android:layout_margin="@dimen/dp_10">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5">

            <EditText
                android:id="@+id/et_operator"
                android:layout_width="@dimen/dp_130"
                android:layout_height="match_parent"
                android:background="@drawable/shape_et"
                android:gravity="center"
                android:hint="@string/str_admin_operator"
                android:textColor="@color/bg_textColor"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold">
            </EditText>
            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@mipmap/img_search"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_10">
            </ImageView>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <Button
                android:id="@+id/bt_start_time"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_25"
                android:background="@drawable/selector_back_bg"
                android:gravity="center"
                android:text="开始时间：--"
                android:textColor="@color/white"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5">
            </Button>

            <Button
                android:id="@+id/bt_end_time"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_25"
                android:background="@drawable/selector_back_bg"
                android:gravity="center"
                android:text="结束时间：--"
                android:textColor="@color/white"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_10">
            </Button>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="@dimen/dp_50"
            android:layout_height="match_parent"
            android:text="@string/str_admin_search"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:background="@drawable/selector_back_bg"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_5">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_bg"
        android:background="@color/gray"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_admin_sn"
            android:textColor="@color/bg_textColor"
            android:textSize="@dimen/sp_10"
            android:gravity="center"
            android:padding="@dimen/dp_3">
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/str_admin_operation_mode"
            android:textColor="@color/bg_textColor"
            android:textSize="@dimen/sp_10"
            android:gravity="center"
            android:padding="@dimen/dp_3">
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/str_admin_recognition_mode"
            android:textColor="@color/bg_textColor"
            android:textSize="@dimen/sp_10"
            android:gravity="center"
            android:padding="@dimen/dp_3">
        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/str_admin_operator"
            android:textColor="@color/bg_textColor"
            android:textSize="@dimen/sp_10"
            android:gravity="center"
            android:padding="@dimen/dp_3">
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_admin_department"
            android:textColor="@color/bg_textColor"
            android:textSize="@dimen/sp_10"
            android:gravity="center"
            android:padding="@dimen/dp_3">
        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_admin_operation_box_no"
            android:textColor="@color/bg_textColor"
            android:textSize="@dimen/sp_10"
            android:gravity="center"
            android:padding="@dimen/dp_3">
        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/str_admin_operator_phone"
            android:textColor="@color/bg_textColor"
            android:textSize="@dimen/sp_10"
            android:gravity="center"
            android:padding="@dimen/dp_3">
        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/str_admin_operation_time"
            android:textColor="@color/bg_textColor"
            android:textSize="@dimen/sp_10"
            android:gravity="center"
            android:padding="@dimen/dp_3">
        </TextView>
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_tag"
        android:layout_marginBottom="@dimen/dp_45">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_operator_record_layout" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/selector_btn"
        android:gravity="center"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_5"
        android:paddingRight="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_5"
        android:text="@string/str_back"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12"
        android:textStyle="bold">
    </TextView>
</RelativeLayout>