<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img_main_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/str_admin_password"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
            android:background="@drawable/shape_bg"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5">
        </TextView>

        <EditText
            android:id="@+id/et_admin_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_weight="6"
            android:background="@drawable/shape_bg"
            android:gravity="center"
            android:hint="@string/str_admin_password_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/sp_12"
            android:textStyle="bold">
        </EditText>

        <TextView
            android:id="@+id/tv_enter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/str_enter"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:background="@drawable/selector_btn"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5">
        </TextView>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/selector_btn"
        android:gravity="center"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_5"
        android:paddingRight="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_5"
        android:text="@string/str_back"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12"
        android:textStyle="bold">
    </TextView>
</RelativeLayout>